# cmake-demo

./: .gitignore
Demo1/: CMakeLists.txt
Demo2/: CMakeLists.txt
Demo3/: CMakeLists.txt
Demo3/buuld/: CMakeCache.txt  Demo  Makefile  cmake_install.cmake
Demo3/buuld/math/: Makefile  cmake_install.cmake
Demo3/math/: CMakeLists.txt
Demo4/: CMakeCache.txt  CMakeLists.txt
Demo5/: CMakeLists.txt
Demo5/math/: CMakeLists.txt
Demo6/: CMakeLists.txt
Demo7/: CMakeLists.txt
Demo8/: CMakeLists.txt
